Fixed an instance where the output stream was reinitialized unnecessarily.

--- a/templates/servlets/getParameters.vm
+++ b/templates/servlets/getParameters.vm
@@ -67,7 +67,11 @@ public class GetParameters extends HttpServlet
 			//simple message for the user
 			try 
 			{
-				out = response.getWriter();
+				if(out == null)
+				{
+					out = response.getWriter();
+				}
+				
 				out.println("Error: " + t.getMessage());
 			} 
 			catch (IOException e) 
