--- a/templates/servlets/getReportTypes.vm
+++ b/templates/servlets/getReportTypes.vm
@@ -64,7 +64,11 @@ public class GetReportTypes extends HttpServlet
 			//simple message for the user
 			try 
 			{
-				out = response.getWriter();
+				if(out == null)
+				{
+					out = response.getWriter();
+				}
+				
 				out.println("Error: " + t.getMessage());
 			} 
 			catch (IOException e) 
