--- a/templates/servlets/getSiteMetrics.vm
+++ b/templates/servlets/getSiteMetrics.vm
@@ -47,7 +47,11 @@ public class GetSiteMetrics extends HttpServlet
 			//simple message for the user
 			try 
 			{
-				out = response.getWriter();
+				if(out == null)
+				{
+					out = response.getWriter();
+				}
+				
 				out.println("Error: " + t.getMessage());
 			} 
 			catch (IOException e) 
