--- a/templates/servlets/getSupportedFrontEnds.vm
+++ b/templates/servlets/getSupportedFrontEnds.vm
@@ -65,7 +65,11 @@ public class GetSupportedFrontEnds extends HttpServlet
 			//simple message for the user
 			try 
 			{
-				out = response.getWriter();
+				if(out == null)
+				{
+					out = response.getWriter();
+				}
+				
 				out.println("Error: " + t.getMessage());
 			} 
 			catch (IOException e) 
