--- a/templates/servlets/getTimeGrains.vm
+++ b/templates/servlets/getTimeGrains.vm
@@ -41,7 +41,11 @@ public class GetTimeGrains extends HttpServlet
 			//simple message for the user
 			try 
 			{
-				out = response.getWriter();
+				if(out == null)
+				{
+					out = response.getWriter();
+				}
+				
 				out.println("Error: " + t.getMessage());
 			} 
 			catch (IOException e) 
