--- a/templates/servlets/getUserGrains.vm
+++ b/templates/servlets/getUserGrains.vm
@@ -40,7 +40,11 @@ public class GetUserGrains extends HttpServlet
 			//simple message for the user
 			try 
 			{
-				out = response.getWriter();
+				if(out == null)
+				{
+					out = response.getWriter();
+				}
+				
 				out.println("Error: " + t.getMessage());
 			} 
 			catch (IOException e) 
