Apache velocity templates to offload redundant code that can't easily be abstracted.
Templates handle generation of ui pages, site servlets, config files,
etc.

--- a/templates/site/servlets/getParameters.vm
+++ b/templates/site/servlets/getParameters.vm
@@ -2,8 +2,8 @@
 
 package $fullPackageName;
 
-import helios.api.report.ReportProcessor;
-import helios.report.parameters.ParameterInfo;
+import com.sutherland.helios.api.report.ReportProcessor;
+import com.sutherland.helios.report.parameters.ParameterInfo;
 
 import java.io.IOException;
 import java.io.PrintWriter;
