--- a/templates/site/servlets/getTimeGrains.vm
+++ b/templates/site/servlets/getTimeGrains.vm
@@ -2,7 +2,7 @@
 
 package $fullPackageName;
 
-import helios.data.granularity.time.TimeGrains;
+import com.sutherland.helios.data.granularity.time.TimeGrains;
 
 import java.io.IOException;
 import java.io.PrintWriter;
