--- a/templates/site/servlets/getReportInfo.vm
+++ b/templates/site/servlets/getReportInfo.vm
@@ -2,44 +2,42 @@
 
 package $fullPackageName;
 
-import helios.api.report.ReportProcessor;
-import helios.exceptions.ReportSetupException;
-import helios.report.parameters.ParameterInfo;
-import helios.report.parameters.parameter.Parameter;
-import helios.report.parameters.sanitize.StringSanitizer;
-
 import java.io.IOException;
 import java.io.PrintWriter;
-import java.util.Map.Entry;
+
+import com.sutherland.helios.api.report.ReportProcessor;
+import com.sutherland.helios.exceptions.ReportSetupException;
+import com.sutherland.helios.report.parameters.ParameterInfo;
+import com.sutherland.helios.report.parameters.parameter.Parameter;
+import com.sutherland.helios.report.parameters.sanitize.StringSanitizer;
 
 import javax.servlet.http.HttpServlet;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 
-
 /**
  * @author $AUTHOR
  *
  */
-public class GetSupportedFrontEnds extends HttpServlet 
+public class GetReportInfo extends HttpServlet 
 {
-
 	private static final long serialVersionUID = $math.random(1,99999999)L;
 
-	private GetSupportedFrontEnds(){}
+	private GetReportInfo() 
+	{}
 	
 	public void doGet(HttpServletRequest request, HttpServletResponse response)
 	{
 		String reportName = null;
-
 		PrintWriter out = null;
+		
 		ReportProcessor reportProcessor = null;
 		try
 		{	
-			reportName = "$REPORT_CLASS_PREFIX" + "." + StringSanitizer.sanitize(request.getParameter(ParameterInfo.REPORT_NAME_HTTP_PARAM_NAME), Parameter.MAX_NAME_LEN);
-			
-			if(reportName != null)
+			if(request.getParameter(ParameterInfo.REPORT_NAME_HTTP_PARAM_NAME) != null)
 			{
+				reportName = "$REPORT_CLASS_PREFIX" + "." + StringSanitizer.sanitize(request.getParameter(ParameterInfo.REPORT_NAME_HTTP_PARAM_NAME), Parameter.MAX_NAME_LEN);
+				
 				reportProcessor = new ReportProcessor();
 				reportProcessor.addJar("$SITE_JAR");
 				reportProcessor.loadReportEntities();
@@ -47,9 +45,10 @@ public class GetSupportedFrontEnds extends HttpServlet
 				if( reportProcessor.isValidReportClassName(reportName))
 				{
 					out = response.getWriter();
-					for(Entry<String, String> reportType :  reportProcessor.getUISupportedReportFrontEnds(reportName).entrySet())
+					
+					for(String info :  reportProcessor.getReportInfo(reportName))
 					{
-						out.println("\"" + reportType.getKey() + "\",\"" + reportType.getValue() + "\""); 
+						out.println(info);
 					}
 				}
 				else
@@ -90,8 +89,6 @@ public class GetSupportedFrontEnds extends HttpServlet
 			{
 				out.close();
 			}
-			
-
 		}
 	}
 }
