--- a/templates/site/servlets/getReportTypes.vm
+++ b/templates/site/servlets/getReportTypes.vm
@@ -2,12 +2,12 @@
 
 package $fullPackageName;
 
-import helios.api.report.ReportProcessor;
-import helios.exceptions.ReportSetupException;
-import helios.report.ReportTypes;
-import helios.report.parameters.ParameterInfo;
-import helios.report.parameters.parameter.Parameter;
-import helios.report.parameters.sanitize.StringSanitizer;
+import com.sutherland.helios.api.report.ReportProcessor;
+import com.sutherland.helios.exceptions.ReportSetupException;
+import com.sutherland.helios.report.ReportTypes;
+import com.sutherland.helios.report.parameters.ParameterInfo;
+import com.sutherland.helios.report.parameters.parameter.Parameter;
+import com.sutherland.helios.report.parameters.sanitize.StringSanitizer;
 
 import java.io.IOException;
 import java.io.PrintWriter;
