--- a/templates/site/servlets/getSupportedFrontEnds.vm
+++ b/templates/site/servlets/getSupportedFrontEnds.vm
@@ -2,42 +2,44 @@
 
 package $fullPackageName;
 
+import com.sutherland.helios.api.report.ReportProcessor;
+import com.sutherland.helios.exceptions.ReportSetupException;
+import com.sutherland.helios.report.parameters.ParameterInfo;
+import com.sutherland.helios.report.parameters.parameter.Parameter;
+import com.sutherland.helios.report.parameters.sanitize.StringSanitizer;
+
 import java.io.IOException;
 import java.io.PrintWriter;
-
-import helios.api.report.ReportProcessor;
-import helios.exceptions.ReportSetupException;
-import helios.report.parameters.ParameterInfo;
-import helios.report.parameters.parameter.Parameter;
-import helios.report.parameters.sanitize.StringSanitizer;
+import java.util.Map.Entry;
 
 import javax.servlet.http.HttpServlet;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 
+
 /**
  * @author $AUTHOR
  *
  */
-public class GetReportInfo extends HttpServlet 
+public class GetSupportedFrontEnds extends HttpServlet 
 {
+
 	private static final long serialVersionUID = $math.random(1,99999999)L;
 
-	private GetReportInfo() 
-	{}
+	private GetSupportedFrontEnds(){}
 	
 	public void doGet(HttpServletRequest request, HttpServletResponse response)
 	{
 		String reportName = null;
+
 		PrintWriter out = null;
-		
 		ReportProcessor reportProcessor = null;
 		try
 		{	
-			if(request.getParameter(ParameterInfo.REPORT_NAME_HTTP_PARAM_NAME) != null)
+			reportName = "$REPORT_CLASS_PREFIX" + "." + StringSanitizer.sanitize(request.getParameter(ParameterInfo.REPORT_NAME_HTTP_PARAM_NAME), Parameter.MAX_NAME_LEN);
+			
+			if(reportName != null)
 			{
-				reportName = "$REPORT_CLASS_PREFIX" + "." + StringSanitizer.sanitize(request.getParameter(ParameterInfo.REPORT_NAME_HTTP_PARAM_NAME), Parameter.MAX_NAME_LEN);
-				
 				reportProcessor = new ReportProcessor();
 				reportProcessor.addJar("$SITE_JAR");
 				reportProcessor.loadReportEntities();
@@ -45,10 +47,9 @@ public class GetReportInfo extends HttpServlet
 				if( reportProcessor.isValidReportClassName(reportName))
 				{
 					out = response.getWriter();
-					
-					for(String info :  reportProcessor.getReportInfo(reportName))
+					for(Entry<String, String> reportType :  reportProcessor.getUISupportedReportFrontEnds(reportName).entrySet())
 					{
-						out.println(info);
+						out.println("\"" + reportType.getKey() + "\",\"" + reportType.getValue() + "\""); 
 					}
 				}
 				else
@@ -89,6 +90,8 @@ public class GetReportInfo extends HttpServlet
 			{
 				out.close();
 			}
+			
+
 		}
 	}
 }
