--- a/templates/site/siteConfig.vm
+++ b/templates/site/siteConfig.vm
@@ -17,5 +17,7 @@ public final class SiteConfig
 	public final static String API_LOGGER_HANDLE = "$API_LOGGER_HANDLE";
 	
 	public final static String SITE_JAR = "$SITE_JAR";
+	
+	public final static boolean STANDALONE=$STANDALONE;
 
 }
